Implement sortBy feature
